# expm_SSC

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  expm_SSC.ioc
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  task.h  task.hpp
Core/Src/: main.c  profile.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  task.cpp
Core/Src/SSC/: CMakeLists.txt  README.md  SSC-Device.esp  SSC-Device.patch  SSC-Device.xlsx  ssc_appl_singleton.c  ssc_appl_singleton.h  ssc_hal.h  ssc_hal_stm_hal_impl.c
